# rayleigh-dispersion-curves

./: CMakeLists.txt  main.cpp
src/: layer.cpp  layer.h  load_model_from_file.cpp  medium.cpp  medium.h  rayleigh.h  rayleigh_dispersion_function.cpp  rayleigh_funamental_mode.cpp  rayleigh_layer_matrix.cpp  rayleigh_next_higher_mode.cpp  rdc_utils.cpp  rdc_utils.h
